tests/error/misc_errors/type_attr_undefined.py
from tests.util import compile_guppy


@compile_guppy
def f(x: "foo.bar") -> None:
    return
