tests/error/misc_errors/type_attr_undefined.err
Error: Variable not defined (at $FILE:5:10)
  | 
3 | 
4 | @compile_guppy
5 | def f(x: "foo.bar") -> None:
  |           ^^^ `foo` is not defined

Guppy compilation failed due to 1 previous error
